# Colonia

./: CMakeLists.txt  buildings.h  colony.h  gamemanager.h  gui.h  main.cpp  readme.md  resources.h  stockpile.h  tree.h
gui/: gui.h  gui_dear.h  gui_defs.h  menu.h
